# spacesuit-monitor

./: .gitignore  CMakeLists.txt  README.md  prj.conf
include/app/: app_config.h  app_init.h  app_ipc.h  app_messages.h
include/core/: suit_state.h
include/drivers/: battery_gauge.h  temp_sensor.h
src/: main.c
src/app/: app_init.c  app_ipc.c
src/core/: suit_state.c
src/drivers/: battery_gauge.c  temp_sensor.c
